exports[`test renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#4179F7",
      "elevation": 3,
      "flexDirection": "row",
      "height": 56,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": 30,
      "paddingTop": 0,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  } />
`;

exports[`test renders header with a null button 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#4179F7",
      "elevation": 3,
      "flexDirection": "row",
      "height": 56,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 0,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "justifyContent": "center",
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "alignSelf": "flex-start",
          "color": "#fff",
          "fontFamily": "Roboto_medium",
          "fontSize": 19,
          "lineHeight": 24,
        }
      }>
      Header
    </Text>
  </View>
</View>
`;

exports[`test renders header with buttons 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#4179F7",
      "elevation": 3,
      "flexDirection": "row",
      "height": 56,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 0,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginLeft": -10,
        "marginRight": 12,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 2,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontFamily": "Ionicons",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "color": "#fff",
              "fontSize": 28,
              "lineHeight": 21,
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 3,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#fff",
            "fontFamily": "Roboto_medium",
            "fontSize": 19,
            "lineHeight": 24,
          }
        }>
        Header
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginRight": -7,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 2,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontFamily": "Ionicons",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "color": "#fff",
              "fontSize": 28,
              "lineHeight": 21,
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders header with buttons and subtitle 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#4179F7",
      "elevation": 3,
      "flexDirection": "row",
      "height": 56,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 0,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginLeft": -10,
        "marginRight": 12,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 2,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontFamily": "Ionicons",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "color": "#fff",
              "fontSize": 28,
              "lineHeight": 21,
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 3,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#fff",
            "fontFamily": "Roboto_medium",
            "fontSize": 19,
            "lineHeight": 24,
          }
        }>
        Header
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginRight": -7,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 2,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontFamily": "Ionicons",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "color": "#fff",
              "fontSize": 28,
              "lineHeight": 21,
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders header with just one button 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#4179F7",
      "elevation": 3,
      "flexDirection": "row",
      "height": 56,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 0,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginLeft": -10,
        "marginRight": 12,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 2,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontFamily": "Ionicons",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "color": "#fff",
              "fontSize": 28,
              "lineHeight": 21,
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 3,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#fff",
            "fontFamily": "Roboto_medium",
            "fontSize": 19,
            "lineHeight": 24,
          }
        }>
        Header
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders header with just one button and iconRight 1`] = `
<View
  iconRight={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#4179F7",
      "elevation": 3,
      "flexDirection": "row",
      "height": 56,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 0,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 3,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#fff",
            "fontFamily": "Roboto_medium",
            "fontSize": 19,
            "lineHeight": 24,
          }
        }>
        Header
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginLeft": -10,
        "marginRight": 12,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 2,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontFamily": "Ionicons",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "color": "#fff",
              "fontSize": 28,
              "lineHeight": 21,
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders header with just one button and subtitle 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#4179F7",
      "elevation": 3,
      "flexDirection": "row",
      "height": 56,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 0,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginLeft": -10,
        "marginRight": 12,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 2,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontFamily": "Ionicons",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "color": "#fff",
              "fontSize": 28,
              "lineHeight": 21,
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 3,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#fff",
            "fontFamily": "Roboto_medium",
            "fontSize": 19,
            "lineHeight": 24,
          }
        }>
        Header
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders header with just one button, iconRight and a subtitle 1`] = `
<View
  iconRight={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#4179F7",
      "elevation": 3,
      "flexDirection": "row",
      "height": 56,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 0,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 3,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "flex-start",
            "color": "#fff",
            "fontFamily": "Roboto_medium",
            "fontSize": 19,
            "lineHeight": 24,
          }
        }>
        Header
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginLeft": -10,
        "marginRight": 12,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 2,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontFamily": "Ionicons",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "color": "#fff",
              "fontSize": 28,
              "lineHeight": 21,
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
</View>
`;
